--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-redux": "^9.2.0",
     "react-router": "^7.1.5",
     "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1"
