--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-jvectormap/world": "^1.1.2",
     "@reduxjs/toolkit": "^2.10.1",
     "apexcharts": "^4.1.0",
+    "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
     "lucide-react": "^0.544.0",
