--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "flatpickr": "^4.6.13",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.544.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.7.0",
@@ -38,7 +40,8 @@
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
     "swiper": "^11.2.3",
-    "tailwind-merge": "^3.0.1"
+    "tailwind-merge": "^3.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
