--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^7.9.4",
     "react-toastify": "^11.0.5",
     "recharts": "^3.2.1",
+    "socket.io-client": "^4.8.3",
     "swiper": "^11.2.3",
     "tailwind-merge": "^3.0.1"
   },
